CHANGES IN VERSION 1.1.20
------------------------
 o runValue for RleList is deprecated, modified runValue(x) to sapply(x, runValue) <2014-09-30, Tue>

CHANGES IN VERSION 1.1.19
------------------------
 o implement csAnno S4 object <2014-09-28, Sun>
 o modify plot function for csAnno instance <2014-09-28, Sun>
 o implement vennpie function <2014-09-28, Sun>

CHANGES IN VERSION 1.1.17
------------------------
 o deprecate plotChrCov to new function covplot <2014-08-18, Mon>
 o add new paramter chrs and xlim to covplot <2014-08-18, Mon>

CHANGES IN VERSION 1.1.16
------------------------
 o optimize plotChrCov, running time reduce drastically <2014-08-15, Fri>

CHANGES IN VERSION 1.1.15
------------------------
 o remove un-mappable peak to prevent fail in peak annotation <2014-08-14, Thu>

CHANGES IN VERSION 1.1.14
------------------------
 o bug fixed in plotDistToTSS <2014-08-14, Thu>

CHANGES IN VERSION 1.1.13
------------------------
 o change TranscriptDb to TxDb according to GenomicFeatures <2014-07-29, Tue>

CHANGES IN VERSION 1.1.12
------------------------
 o bug fixed in plotChrCov <2014-07-21, Mon>

CHANGES IN VERSION 1.1.10
------------------------
 o bug fixed in calculating distances from peak end <2014-06-18, Wed>

CHANGES IN VERSION 1.1.9
------------------------
 o add level parameter to annotatePeak, and set it to "transcript" by default. 
   Now annotatePeak will annotate peaks in transcript level 
   except user specify level = "gene" <2014-06-16, Mon>
 o add addFlankGeneInfo parameter to annotatePeak. 
   If it set to true, all features within the flankDistance will be annotated. <2014-06-16, Mon>

CHANGES IN VERSION 1.1.8
------------------------
 o bug fixed when peak overlap with feature <2014-06-11, Wed>
 o optimize for getting overlap features of peaks <2014-06-11, Wed>
 o update plotAnnoPie, separate the pie and legend to prevent label overlap <2014-06-12, Thu>

CHANGES IN VERSION 1.1.7
------------------------